# mineclone

./: CMakeLists.txt  run
include/glad/: glad.h
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  Model.cpp  Model.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h  World.cpp  World.h  cube_shader.frag  cube_shader.vert  main.cpp
